--- a/Application/src/app/components/sort-interface/sort-interface.component.html
+++ b/Application/src/app/components/sort-interface/sort-interface.component.html
@@ -5,6 +5,7 @@
         <button (click)="bubbleSort()"> BubSort </button>
         <button (click)="insertionSort()"> Insertion Sort </button>
         <button (click)="mergeSort()"> Merge Sort </button>
+        <button (click)="quickSort()"> Quick Sort </button>
     </div>
 
     <div>
@@ -27,7 +28,10 @@
             <label for="timer">Timer(ms):</label>
             <input type="number" id="timer" class= "numBox" step ="1" value="100">
         </div>
-        <button (click)="changeSettings()">Change Settings</button>
+        <div>
+            <button (click)="changeSettings()">Change Settings</button>
+            <button (click)="resetArray()">Reset Array</button>
+        </div>
     </div>
 
  
